--- a/my-react-portfolio/src/index.css
+++ b/my-react-portfolio/src/index.css
@@ -1,61 +1,158 @@
+body,
+html {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  font-family: "Merriweather", "Helvetica Neue", Arial, sans-serif;
+}
+
+hr {
+  max-width: 50px;
+  border-width: 3px;
+  border-color: #f05f40;
+}
+
+hr.light {
+  border-color: #fff;
+}
+
+a {
+  color: purple;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  transition: all 0.2s;
+}
+a:hover {
+  color: #f05f40;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.text-primary {
+  color: #f05f40 !important;
+}
+
+/* Buttons */
+.btn {
+  font-weight: 700;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 300px;
+  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
+}
+
+.btn-xl {
+  padding: 1rem 2rem;
+}
+
+.btn-primary {
+  background-color: #f05f40;
+  border-color: #f05f40;
+}
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active {
+  color: #fff;
+  background-color: #ee4b28 !important;
+}
+.btn-primary:active,
+.btn-primary:focus {
+  box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
+}
+
+/* Footer */
+footer a {
+  margin: 20pt;
+}
+
+footer i.fab {
+  font-size: 2rem;
+}
+
+a.white-link {
+  color: #fff;
+}
+
 /* Contact Us Form */
 .form-control {
-    padding: 0.664rem 1rem;
-    font-size: 0.95rem;
-    line-height: 1.125rem;
-    color: #495057;
-    border: 1px solid #becad6;
-    font-weight: 300;
-    border-radius: 0.375rem;
-    transition: border-color 250ms cubic-bezier(0.27, 0.01, 0.38, 1.06), box-shadow 250ms cubic-bezier(0.27, 0.01, 0.38, 1.06);
-    margin-bottom: 30px;
-  }
-  
-  .form-control:hover {
-    border-color: #f05f40;
-  }
-  
-  .form-control:focus {
-    color: #495057;
-    border-color: #f05f40;
-    box-shadow: 0 0.313rem 0.719rem rgba(0, 123, 255, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
-  }
-  
-  .form-control:focus:hover {
-    border-color: #007bff;
-  }
-  
-  .form-control::-webkit-input-placeholder {
-    color: #868e96;
-  }
-  
-  .form-control:-ms-input-placeholder {
-    color: #868e96;
-  }
-  
-  .form-control::placeholder {
-    color: #868e96;
-  }
-  
-  .form-control:disabled, .form-control[readonly] {
-    background-color: #f5f6f7;
-  }
-  
-  .form-control:disabled:hover, .form-control[readonly]:hover {
-    cursor: not-allowed;
-  }
-  
-  select.form-control:hover {
-    cursor: pointer;
-  }
-  
-  form label,
-  form .col-form-label,
-  form .col-form-legend {
-    font-size: 0.95rem;
-  }
-  
-  form label:hover {
-    cursor: pointer;
-  }
-  
+  padding: 0.664rem 1rem;
+  font-size: 0.95rem;
+  line-height: 1.125rem;
+  color: #495057;
+  border: 1px solid #becad6;
+  font-weight: 300;
+  border-radius: 0.375rem;
+  transition: border-color 250ms cubic-bezier(0.27, 0.01, 0.38, 1.06), box-shadow 250ms cubic-bezier(0.27, 0.01, 0.38, 1.06);
+  margin-bottom: 30px;
+}
+
+.form-control:hover {
+  border-color: #f05f40;
+}
+
+.form-control:focus {
+  color: #495057;
+  border-color: #f05f40;
+  box-shadow: 0 0.313rem 0.719rem rgba(0, 123, 255, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+}
+
+.form-control:focus:hover {
+  border-color: #007bff;
+}
+
+.form-control::-webkit-input-placeholder {
+  color: #868e96;
+}
+
+.form-control:-ms-input-placeholder {
+  color: #868e96;
+}
+
+.form-control::placeholder {
+  color: #868e96;
+}
+
+.form-control:disabled, .form-control[readonly] {
+  background-color: #f5f6f7;
+}
+
+.form-control:disabled:hover, .form-control[readonly]:hover {
+  cursor: not-allowed;
+}
+
+select.form-control:hover {
+  cursor: pointer;
+}
+
+form label,
+form .col-form-label,
+form .col-form-legend {
+  font-size: 0.95rem;
+}
+
+form label:hover {
+  cursor: pointer;
+}
+
+/* Error Warning */
+.error-text {
+  color: red;
+}
+
