--- a/my-react-portfolio/src/components/styles/project.css
+++ b/my-react-portfolio/src/components/styles/project.css
@@ -1,9 +1,9 @@
 .work-container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    
+    gap: 50px;   
 }
+
 .card {
     border-style: solid;
     border-color: #014769;
