--- a/my-react-portfolio/src/index.css
+++ b/my-react-portfolio/src/index.css
@@ -2,30 +2,23 @@ body,
 html {
   width: 100%;
   height: 100%;
+  ;
 }
 
 body {
   font-family: "Merriweather", "Helvetica Neue", Arial, sans-serif;
+  background-color: #CBF1F5;
 }
 
-hr {
-  max-width: 50px;
-  border-width: 3px;
-  border-color: #f05f40;
-}
-
-hr.light {
-  border-color: #fff;
-}
 
 a {
-  color: purple;
+  color: #71C9CE;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   transition: all 0.2s;
 }
 a:hover {
-  color: #f05f40;
+  color: #4c40f0;
 }
 
 
@@ -63,14 +56,14 @@ a:hover {
 }
 
 .btn-primary {
-  background-color: #f05f40;
-  border-color: #f05f40;
+  background-color: blue;
+  border-color: blue;
 }
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active {
   color: #fff;
-  background-color: #ee4b28 !important;
+  background-color: blue !important;
 }
 .btn-primary:active,
 .btn-primary:focus {
