--- a/my-react-portfolio/src/components/styles/project.css
+++ b/my-react-portfolio/src/components/styles/project.css
@@ -19,8 +19,8 @@
     
   .card-header {
     text-align: center;
-    background-color: #4682b4;
-    color: white;
+    background-color: #E3FDFD;
+    color: Blue;
     font-size: 100%;
     }
     
@@ -34,5 +34,9 @@
     margin-left: 15px;
     margin-right: 15px;
     color: royalblue;
+    padding: 1px 5px;
   }
+
+
+
 
