--- a/src/components/styles/project.css
+++ b/src/components/styles/project.css
@@ -19,22 +19,17 @@
     
   .card-header {
     text-align: center;
-    background-color: #E3FDFD;
-    color: Blue;
-    font-size: 100%;
     }
     
   .card-body {
-    margin: auto;
-    padding-left: 0%;
-    padding-right: 0%;
+    text-align: center;
+
     }
   
-  .btn {
-    margin-left: 15px;
-    margin-right: 15px;
-    color: royalblue;
-    padding: 1px 5px;
+  .card-links {
+    display: flex;
+  justify-content: center;
+  
   }
 
 
