--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ html {
 
 body {
   font-family: "Merriweather", "Helvetica Neue", Arial, sans-serif;
-  background-color: #CBF1F5;
+  background-color: #E3FDFD;
 }
 
 
@@ -56,8 +56,8 @@ a:hover {
 }
 
 .btn-primary {
-  background-color: blue;
-  border-color: blue;
+  /* background-color: blue;
+  border-color: blue; */
 }
 .btn-primary:hover,
 .btn-primary:focus,
