updated navlink path and adjusted color on body and nagivation tab

--- a/src/components/styles/project.css
+++ b/src/components/styles/project.css
@@ -6,7 +6,7 @@
 
 .card {
     border-style: solid;
-    border-color: #014769;
+    border-color: #71C9CE;
     width: 18rem;
     transition: all 0.2s ease-in;
     
